# Version2.0_Air_quality

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
.github/workflows/: forward-readings.yml
api/: [...path].ts  healthz.ts
api/internal/: forward.ts
api/v1/: readings.ts
convex/: auth.ts  devices.ts  http.ts  readings.ts  schema.ts  validation.ts
convex/_generated/: api.d.ts
examples/: convex-batch.json  device-batch.json  reading.json  signed-request.txt
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_main.c  config.example.h  config.h  device_auth.c  device_auth.h  http_upload.c  http_upload.h  local_queue.c  local_queue.h  reading_json.c  reading_json.h  sensor_reader.c  sensor_reader.h  spiffs_init.c  spiffs_init.h  time_sync.c  time_sync.h  wifi_manager.c  wifi_manager.h
scripts/: check-reading-api.mjs
src/: app.ts  config.ts  logger.ts  rateLimit.ts  server.ts  types.ts
src/auth/: convexAuth.ts  crypto.ts  deviceAuth.ts
src/db/: deviceRepository.ts  migrations.ts  postgres.ts  queueRepository.ts  rateLimitRepository.ts
src/http/: responses.ts
src/routes/: health.ts  readings.ts
src/scripts/: registerDevice.ts
src/services/: convexClient.ts
src/validation/: readings.ts
src/worker/: backoff.ts  forwardingWorker.ts  queueProcessor.ts
tests/: direct-ingestion.test.ts  gas-validation.test.ts
